--- a/Exercicios/desafio-cordel/imagens/index.html
+++ b/Exercicios/desafio-cordel/imagens/index.html
@@ -35,7 +35,7 @@
 
  
 
-<section class="imagem">
+<section class="imagem" id="img01">
     <p>
         Não é mais como era antes <br>
         É tudo abreviado <br>
@@ -56,7 +56,7 @@
     Ou vai até no começo <br>
     Agora é .com <br>
     Se o saite é muito bom <br>
-    Ele vale um alto preço. <br>
+    Ele vale um alto preço. <br> <br>
     Pra piorar a liguagem <br>
     O emoticom é um risco <br>
     Tem símbolo para tudo <br>
@@ -68,7 +68,7 @@
 
  
 
-<section class="imagem">
+<section class="imagem" id="img02">
     <p>
         Tenho saudade das cartas <br>
         Escritas com a própria mão <br>
@@ -89,7 +89,7 @@
     A pessoa foi embora <br>
     Abriu outro aplicativo <br>
     O mundo ficou cativo <br>
-    Da tecnologia do agora. <br>
+    Da tecnologia do agora. <br> <br>
     Felizmente, pra orar <br>
     Não precisa de internet <br>
     Deus escuta todo mundo <br>
