--- a/ex002/desafios-tabela/desafio-tabela-1.html
+++ b/ex002/desafios-tabela/desafio-tabela-1.html
@@ -23,6 +23,10 @@
             text-align: center;
             vertical-align: middle;
         }
+
+        h1{
+            text-align: center;
+        }
     </style>
 </head>
 <body>
