--- a/ex002/desafios-tabela/desafio-tabela-2.html
+++ b/ex002/desafios-tabela/desafio-tabela-2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desafio Tabela 2</title>
+    <title>Desafio de Tabela 2</title>
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
@@ -20,10 +20,14 @@
         td {
             border: 2px solid black;
         }
+
+        h1 {
+            text-align: center;
+        }
     </style>
 </head>
 <body>
-    <h1>Desafio Tabela 2</h1>
+    <h1>Desafio de Tabela 2</h1>
 
     <table>
         <tr>
